--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-VITE_ANTHROPIC_API_KEY=your_key_here
+# Supabase Configuration
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key
+
+# Anthropic (for AI summaries - existing)
+VITE_ANTHROPIC_API_KEY=your-claude-api-key
